# Deepsort_rknn

./: .gitignore  CMakeLists.txt  README.md  push_to_rk3588.sh  yolov5_deepsort.cpp
deepsort/: CMakeLists.txt
deepsort/include/: MyKalmanFilter.h  datatype.h  deepsort.h  featuretensor.h  hungarianoper.h  linear_assignment.h  model.hpp  nn_matching.h  track.h  tracker.h
deepsort/src/: deepsort.cpp  featuretensor.cpp  hungarianoper.cpp  kalmanfilter.cpp  linear_assignment.cpp  nn_matching.cpp  track.cpp  tracker.cpp
include/: box.h  common.h  mytime.h  resize.h  rknn_fp.h
src/: mytime.cpp  resize.cpp  rknn_fp.cpp
yolov5/include/: decode.h  detect.h  videoio.h
yolov5/src/: decode.cpp  detect.cpp  videoio.cpp
